k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-ingress
  namespace: restauranty
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sebsrestaurant.diogohack.shop
    secretName: restauranty-tls
  rules:
  - host: sebsrestaurant.diogohack.shop
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/auth(/|$)(.*)
        backend:
          service:
            name: auth
            port:
              number: 3001
      - pathType: ImplementationSpecific
        path: /api/items(/|$)(.*)
        backend:
          service:
            name: items
            port:
              number: 3003
      - pathType: ImplementationSpecific
        path: /api/discounts(/|$)(.*)
        backend:
          service:
            name: discounts
            port:
              number: 3002
      - pathType: ImplementationSpecific
        path: /(.*)
        backend:
          service:
            name: frontend
            port:
              number: 80
